Mon Dec 24 11:34:58 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h: removed unused fields

Sun Dec 23 16:08:29 EST 2007	JK Lowden <jklowden@freetds.org>
	* src/apps/tsql.c 
	* src/ctlib/cs.c src/ctlib/unittests/common.c
	* src/dblib/dblib.c
	* src/tds/config.c src/tds/unittests/convert.c
	- added STD_DATETIME_FMT to allow for WIN32 shortcomings

Fri Dec 21 16:20:03 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* include/tds.h src/ctlib/ct.c src/odbc/odbc.c src/tds/query.c:
	- make odbc cursor test work using sp_cursoropen with parameters

Fri Dec 21 11:38:47 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/common.c src/odbc/unittests/common.h:
	* src/odbc/unittests/cursor3.c src/odbc/unittests/cursor4.c:
	* src/odbc/unittests/cursor5.c:
	- cursor tests should work

Fri Dec 21 10:05:12 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* configure.ac include/replacements.h src/replacements/vasprintf.c:
	* win32/config.h:
	- applied modified patch #1848920

Thu Dec 20 22:56:34 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/dblib/dblib.c src/dblib/unittests/common.h:
	* src/dblib/unittests/setnull.c src/dblib/unittests/thread.c:
	- remove warnings

Thu Dec 20 17:46:03 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/odbc.c:
	- improve cursor attribute setting
	- fix a small issue with unixODBC and 64 bit

Wed Dec 19 16:08:17 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/cursor3.c src/odbc/unittests/cursor4.c:
	- remove warnings

Wed Dec 19 15:35:22 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/attributes.c(added) src/odbc/unittests/attributes.in(added):
	* src/odbc/unittests/Makefile.am: add a test for statement attributes
	* src/odbc/unittests/describecol.c: fix possible core

Tue Dec 18 09:09:27 CET 2007    Frediano Ziglio <freddy77_A_gmail_D_com>
	* src/odbc/unittests/Makefile.am src/odbc/unittests/cursor3.c(added):