@@ -1,62 +1,16 @@
+#   $Id: freetds.conf,v 1.12 2007-12-25 06:02:36 jklowden Exp $
 #
+# This file is installed by FreeTDS if no file by the same 
+# name is found in the installation directory.  
 #
-#   $Id: freetds.conf,v 1.11 2005-12-05 21:34:12 freddy77 Exp $
-#
-# The freetds.conf file is a replacement for the original interfaces
-# file developed by Sybase.  You may use either this or the interfaces
-# file, but not both.
-#
-# FreeTDS will search for a conf file in the following order:
-#
-#     1) check if a file was set programatically via dbsetifile() and
-#        is in .conf format, if so use that,
-#
-#     2) otherwise, if env variable FREETDSCONF specifies a properly 
-#        formatted config file, use it,
-#
-#     3) otherwise, look in ~/.freetds.conf,
-#
-#     4) otherwise, look in @sysconfdir@/freetds.conf
-#
-# If FreeTDS has found no suitable conf file it will then search for
-# an interfaces file in the following order:
-#
-#     1) check if a file was set programatically via dbsetifile() and 
-#        is in interfaces format, if so use that,
-#
-#     2) look in ~/.interfaces
-#
-#     3) look in $SYBASE/interfaces (where $SYBASE is an environment
-#        variable)
-#
-# Only hostname, port number, and protocol version can be specified
-# using the interfaces format.
-#
-# The conf file format follows a modified Samba style layout.  There
-# is a [global] section which will affect all database servers and
-# basic program behaviour, and a section headed with the database
-# server's name which will have settings which override the global
-# ones.
-#
-# Note that environment variables TDSVER, TDSDUMP, TDSPORT, TDSQUERY, 
-# and TDSHOST will override values set by a .conf or .interfaces file.
-#
-# To review the processing of the above, set env variable TDSDUMPCONFIG
-# to a file name to log configuration processing.
-#
-# Global settings, any value here may be overridden by a database
+# For information about the layout of this file and its settings, 
+# see the freetds.conf manpage "man freetds.conf".  
+
+# Global settings are overridden by those in a database
 # server specific section
 [global]
         # TDS protocol version
-	tds version = 4.2
-
-;	initial block size = 512
-
-	# uses some fixes required for some bugged MSSQL 7.0 server that
-	# return invalid data to big endian clients
-	# NOTE TDS version 7.0 or 8.0 should be used instead
-;	swap broken dates = no
-;	swap broken money = no
+;	tds version = 4.2
 
 	# Whether to write a TDSDUMP file for diagnostic purposes
 	# (setting this to /tmp is insecure on a multi-user system)
@@ -67,50 +21,19 @@
 ;	timeout = 10
 ;	connect timeout = 10
 	
-	# If you get out of memory errors, it may mean that your client
+	# If you get out-of-memory errors, it may mean that your client
 	# is trying to allocate a huge buffer for a TEXT field.  
-	# (Microsoft servers sometimes pretend TEXT columns are
-	# 4 GB wide!)   If you have this problem, try setting 
-	# 'text size' to a more reasonable limit 
+	# Try setting 'text size' to a more reasonable limit 
 	text size = 64512
 
-# This is a Sybase hosted database server, if you are directly on the
-# net you can use it to test.
-[JDBC]
-	host = 192.138.151.39
-	port = 4444
+# A typical Sybase server
+[egServer50]
+	host = symachine.domain.com
+	port = 5000
 	tds version = 5.0
 
-# The same server, using TDS 4.2.  Used in configuration examples for the
-# pool server, since the pool server supports only TDS 4.2.
-[JDBC_42]
-	host = 192.138.151.39
-	port = 4444
-	tds version = 4.2
-
-# The client connecting to the pool server will use this to find its
-# listening socket.  This entry assumes that the client is on the same
-# system as the pool server.
-[mypool]
-	host = 127.0.0.1
-	port = 5000
-	tds version = 4.2
-
-# A typical Microsoft SQL Server 7.0 configuration	
-;[MyServer70]
-;	host = ntmachine.domain.com
-;	port = 1433
-;	tds version = 7.0
-
-# A typical Microsoft SQL Server 2000 configuration
-;[MyServer2k]
-;	host = ntmachine.domain.com
-;	port = 1433
-;	tds version = 8.0
-	
-# A typical Microsoft SQL Server 6.x configuration	
-;[MyServer65]
-;	host = ntmachine.domain.com
-;	port = 1433
-;	tds version = 4.2
-
+# A typical Microsoft server
+[egServer70]
+	host = ntmachine.domain.com
+	port = 1433
+	tds version = 7.0
